<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_label"
        android:textColor="?attr/text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_margin="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/saved_cities_delete_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="?attr/text_color"
            android:text="@string/delete_all_favorite_cities_saved" />

        <Button
            android:id="@+id/delete_cities_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:text="@string/delete"
            android:backgroundTint="#C0C0C0"
            android:textColor="#ffff"
            android:layout_gravity="center_vertical"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            />
    </RelativeLayout>

</LinearLayout>